--- a/package.json
+++ b/package.json
@@ -34,12 +34,16 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.18.2",
     "autotask-node": "^1.0.0",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "winston": "^3.11.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.5",
     "@types/jest": "^29.5.8",
     "@types/node": "^20.10.0",
     "@typescript-eslint/eslint-plugin": "^6.13.0",
